# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: github_action.yaml
page_analyzer/: app.py  db.py  parser.py  validate.py
page_analyzer/templates/: 404.html  index.html  layout.html  show.html  urls.html
templates/: index.html
